fixed the text on dashboard
cropped the image

--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -76,7 +76,7 @@ body {
 .centered-text {
   font-weight: bold;
   position: absolute;
-  top: 18%;
+  top: 38%;
   left: 50%;
   transform: translate(-50%, -50%);
   color:rgb(4, 8, 61); 
@@ -90,15 +90,28 @@ body {
   text-align: center;
   font-family: 'Merriweather';
   position: absolute;
-  top: 35%;
+  top: 53%;
   left: 50%;
   transform: translate(-50%, -50%);
   color:rgb(4, 8, 61); 
-  font-size: 300%; 
+  font-size: 200%; 
   padding: 10px; 
   opacity: 85%;
 }
-
+/*
+.centered-text2 {
+  
+  text-align: center;
+  font-family: 'Merriweather';
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color:rgb(4, 8, 61); 
+  font-size: 200%; 
+  padding: 10px; 
+}
+*/
 #rightalignbuttons{
   font-family: 'Merriweather';
   position: fixed;
